# evolution-simulation

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.claude/: settings.local.json
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  determinism_regression.yml  feature_request.yml  feature_task.yml  security.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  determinism.md  feature.md  security.md
.github/codeql/: codeql-config.yml
.github/qa/: whitelizard.txt
.github/scripts/: quality-metrics-requirements.txt  quality_metrics.py  run-quality-metrics.sh
.github/workflows/: cancel-stale-runs.yml  ci.yml  claude-code-review.yml  codeql.yml
assets/manifests/: labels.json
assets/sprites/: atlas.json
crates/beast-channels/: Cargo.toml  README.md
crates/beast-channels/src/: composition.rs  expression.rs  fingerprint.rs  lib.rs  manifest.rs  registry.rs  schema.rs
crates/beast-channels/tests/: example_manifests.rs  malformed_manifests.rs  schema_drift.rs
crates/beast-chronicler/: Cargo.toml
crates/beast-chronicler/src/: chronicler.rs  confidence.rs  event.rs  label.rs  lib.rs  pattern.rs  query.rs  snapshot.rs  tick_range.rs
crates/beast-chronicler/tests/: cross_instance_determinism.rs  label_manifest_integration.rs  no_hardcoded_label_strings.rs  proptest_signature_invariance.rs  query_api_integration.rs
crates/beast-climate/: Cargo.toml
crates/beast-climate/src/: lib.rs
crates/beast-core/: Cargo.toml  README.md
crates/beast-core/benches/: core_bench.rs
crates/beast-core/src/: body_site.rs  entity.rs  error.rs  fixed_point.rs  lib.rs  math.rs  prng.rs  time.rs
crates/beast-core/tests/: proptest_fixed_point.rs  proptest_math.rs  proptest_prng.rs
crates/beast-ecs/: Cargo.toml
crates/beast-ecs/src/: components.rs  entity_id.rs  error.rs  lib.rs  resources.rs  storage.rs  system.rs  world.rs
crates/beast-ecs/src/components/: biome.rs  formation.rs  keeper.rs  markers.rs  physiology.rs  spatial.rs  traits.rs
crates/beast-ecs/tests/: determinism.rs  iteration_order.rs
crates/beast-genome/: Cargo.toml  README.md
crates/beast-genome/src/: body_site.rs  channel_vector.rs  duplication.rs  error.rs  gene.rs  genome.rs  lib.rs  lineage.rs  modifier.rs  mutation.rs  save.rs  starter.rs
crates/beast-genome/tests/: mutation_properties.rs
crates/beast-interpreter/: Cargo.toml
crates/beast-interpreter/src/: body_map.rs  composition.rs  emission.rs  error.rs  expression.rs  interpreter.rs  lib.rs  parameter_map.rs  phenotype.rs  scale_band.rs
crates/beast-interpreter/src/parameter_map/: analysis.rs  ast.rs  eval.rs  literal.rs  mod.rs  parser.rs  test_support.rs
crates/beast-interpreter/tests/: composition_thresholds.rs  determinism.rs  proptest_random.rs  scale_band_fixtures.rs
crates/beast-interpreter/tests/common/: mod.rs
crates/beast-manifest/: Cargo.toml
crates/beast-manifest/src/: lib.rs  provenance.rs  registry.rs  schema.rs
crates/beast-primitives/: Cargo.toml  README.md
crates/beast-primitives/src/: category.rs  cost.rs  effect.rs  lib.rs  manifest.rs  math.rs  registry.rs  schema.rs
crates/beast-primitives/tests/: example_manifests.rs  malformed_manifests.rs  schema_drift.rs
crates/beast-render/: Cargo.toml
crates/beast-render/benches/: pipeline_bench.rs
crates/beast-render/examples/: animation.rs  encounter.rs  window.rs  world_map.rs
crates/beast-render/src/: animation.rs  blueprint.rs  channels.rs  directive.rs  encounter.rs  error.rs  lib.rs  pipeline.rs  renderer.rs  sprite.rs  world_map.rs
crates/beast-render/tests/: animation_test.rs  pipeline_test.rs  random_creatures_test.rs  sprite_test.rs
crates/beast-serde/: Cargo.toml
crates/beast-serde/src/: lib.rs  manager.rs  migration.rs  replay.rs  save.rs  validator.rs
crates/beast-serde/tests/: replay_determinism_test.rs
crates/beast-sim/: Cargo.toml
crates/beast-sim/src/: budget.rs  combat.rs  determinism.rs  error.rs  formation.rs  lib.rs  parasitism.rs  predation.rs  schedule.rs  simulation.rs  spawner.rs  tick.rs
crates/beast-sim/tests/: combat_encounter.rs  determinism_test.rs  starter_survival_test.rs
crates/beast-sim/tests/common/: mod.rs
crates/beast-ui/: Cargo.toml
crates/beast-ui/src/: binding.rs  event.rs  layout.rs  lib.rs  paint.rs  screens.rs  tree.rs  widget.rs
crates/beast-ui/src/screens/: bestiary.rs  data.rs  encounter.rs  frame.rs  settings.rs  world_map.rs
crates/beast-ui/src/widget/: button.rs  card.rs  dialog.rs  grid.rs  label.rs  list.rs  render_viewport.rs  stack.rs
crates/beast-ui/tests/: bestiary_integration.rs  layout_perf.rs  layout_snapshot.rs  screen_bindings.rs  screen_snapshots.rs
crates/beast-world/: Cargo.toml
crates/beast-world/src/: archipelago.rs  biome_tag.rs  config.rs  lib.rs  noise.rs
documentation/: Beast_Evolution_Game_Master_Design.docx  INVARIANTS.md  PROGRESS_LOG.md
documentation/architecture/: CRATE_LAYOUT.md  ECS_SCHEDULE.md  IMPLEMENTATION_ARCHITECTURE.md  README.md
documentation/core-model/: 01_channels.md  02_carriers.md  03_operators_and_composition.md  04_primitives.md  05_registries_and_manifests.md  06_context_gates.md  07_interpreter.md  08_determinism.md  09_crate_blueprint.md  README.md
documentation/emergence/: 00_MASTER_SYNTHESIS.md  01_HARDCODED_AUDIT.md  10_environment_emergence.md  20_materials_emergence.md  30_biomes_emergence.md  40_ecology_emergence.md  50_social_emergence.md  55_multi_affiliation.md  56_relationship_graph_emergence.md  57_agent_ai.md  58_channel_genesis.md  60_culture_emergence.md  70_naming_and_discovery.md  90_topology_decision.md  99_integration_with_v1.md  README.md  RESEARCH_SYNTHESIS_SUMMARY.md
documentation/perf/: S10_baseline.md  S9_baseline.md
paper/: README.md  channel_model.aux  channel_model.fdb_latexmk  channel_model.fls  channel_model.out  channel_model.tex  compile.bat  compile.sh
scripts/: README.md  ci-local.sh  post-pr-review.sh
(+58 files in other folders)
