[workspace]
resolver = "2"
members = [
    "crates/beast-core",
    "crates/beast-manifest",
    "crates/beast-channels",
    "crates/beast-primitives",
    "crates/beast-genome",
    "crates/beast-interpreter",
    "crates/beast-ecs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Proprietary"
authors = ["Beast Evolution Game contributors"]
repository = "https://example.invalid/beast-evolution-game"
publish = false

[workspace.dependencies]
blake3 = { version = "1.5", default-features = false }
fixed = { version = "1.28", features = ["serde"] }
rand_core = "0.9"
rand_xoshiro = { version = "0.7", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Sprint 2: manifest + registry deps. `jsonschema` 0.46 uses the modern
# `validator_for` API and natively supports Draft 2020-12 (matching the
# `$schema` URI declared in our canonical schema files). `regex` backs the
# provenance string validator.
jsonschema = { version = "0.46", default-features = false }
regex = "1"

# S4.6 parser rewrite (#89). Declarative combinator library for the
# parameter-mapping expression grammar. `default-features = false` turns
# off `std`-specific helpers we don't need; we still get the core parser
# combinators via the `alloc` feature (enabled by default via
# `default-features`, which we keep because this runs in a std environment
# and `winnow`'s `std` feature is what's needed for `impl std::error::Error`
# on error types).
winnow = "0.7"

# S5 scaffold (#17) — specs-based ECS. Pinned at 0.20 (latest stable at
# time of writing) which supports our 2021 edition + rust 1.75 MSRV. `specs`
# brings in `shred` as a transitive for resource storage; we wrap its World
# with our own facade so downstream crates never import specs directly.
#
# The `parallel` feature is enabled here (S5.6) so `specs::ParJoin` is
# available for embarrassingly-parallel per-entity reads. The scheduler
# (S6) will still serialise stages — parallelism only happens within a
# stage, and only for read-only access paths.
specs = { version = "0.20", default-features = false, features = ["parallel"] }

beast-core = { path = "crates/beast-core" }
beast-manifest = { path = "crates/beast-manifest" }
beast-channels = { path = "crates/beast-channels" }
beast-primitives = { path = "crates/beast-primitives" }
beast-genome = { path = "crates/beast-genome" }
beast-interpreter = { path = "crates/beast-interpreter" }
beast-ecs = { path = "crates/beast-ecs" }

# Dev-only
proptest = "1.5"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false

[profile.bench]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = true
