[workspace]
resolver = "2"
members = [
    "crates/beast-core",
    "crates/beast-manifest",
    "crates/beast-channels",
    "crates/beast-primitives",
    "crates/beast-genome",
    "crates/beast-interpreter",
    "crates/beast-ecs",
    "crates/beast-sim",
    "crates/beast-serde",
    "crates/beast-world",
    "crates/beast-climate",
    "crates/beast-render",
    "crates/beast-chronicler",
    "crates/beast-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Proprietary"
authors = ["Beast Evolution Game contributors"]
repository = "https://example.invalid/beast-evolution-game"
publish = false

[workspace.dependencies]
blake3 = { version = "1.5", default-features = false }
fixed = { version = "1.28", features = ["serde"] }
rand_core = "0.9"
rand_xoshiro = { version = "0.7", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# S7 (#129) — bincode 2.x for the canonical binary save format. The
# `serde` feature surfaces the `bincode::serde::{encode_to_vec,
# decode_from_slice}` adapter so existing `#[derive(Serialize,
# Deserialize)]` types round-trip without a separate `Encode`/`Decode`
# derive. `default-features = false` drops `derive` (we don't need
# the `bincode::Encode` derive macro) and keeps the build lean.
bincode = { version = "2.0", default-features = false, features = ["serde", "std"] }

# Sprint 2: manifest + registry deps. `jsonschema` 0.46 uses the modern
# `validator_for` API and natively supports Draft 2020-12 (matching the
# `$schema` URI declared in our canonical schema files). `regex` backs the
# provenance string validator.
jsonschema = { version = "0.46", default-features = false }
regex = "1"

# S4.6 parser rewrite (#89). Declarative combinator library for the
# parameter-mapping expression grammar. `default-features = false` turns
# off `std`-specific helpers we don't need; we still get the core parser
# combinators via the `alloc` feature (enabled by default via
# `default-features`, which we keep because this runs in a std environment
# and `winnow`'s `std` feature is what's needed for `impl std::error::Error`
# on error types).
winnow = "0.7"

# S5 scaffold (#17) — specs-based ECS. Pinned at 0.20 (latest stable at
# time of writing) which supports our 2021 edition + rust 1.75 MSRV. `specs`
# brings in `shred` as a transitive for resource storage; we wrap its World
# with our own facade so downstream crates never import specs directly.
#
# The `parallel` feature is enabled here (S5.6) so `specs::ParJoin` is
# available for embarrassingly-parallel per-entity reads. The scheduler
# (S6) will still serialise stages — parallelism only happens within a
# stage, and only for read-only access paths.
#
# DETERMINISM-CRITICAL: the version is pinned to exactly 0.20.x because
# `SortedEntityIndex` (`crates/beast-ecs/src/entity_id.rs`) relies on
# `specs::Entity` deriving `Ord` over `(index, generation)` in that
# field order. A patch release that reorders the fields would silently
# break replay determinism. Issue #175 tracks migrating
# `SortedEntityIndex` to `BTreeSet<u32>` keyed on `Entity::id()` so we
# stop depending on the derived impl.
specs = { version = "~0.20", default-features = false, features = ["parallel"] }

# S9.1 (#182) — SDL3 Rust bindings. We pin the minor (0.18) and let the
# `beast-render` crate opt into `build-from-source-static` so the workspace
# vendors and statically links a known-good SDL3 build instead of relying
# on a system shared library. Build prerequisite: `cmake` + a C toolchain
# on PATH (MSVC on Windows, clang/gcc elsewhere). CI builds that don't
# need rendering use `beast-render` with `--no-default-features --features
# headless` to skip the native build entirely.
sdl3 = { version = "0.18", default-features = false }

beast-core = { path = "crates/beast-core" }
beast-manifest = { path = "crates/beast-manifest" }
beast-channels = { path = "crates/beast-channels" }
beast-primitives = { path = "crates/beast-primitives" }
beast-genome = { path = "crates/beast-genome" }
beast-interpreter = { path = "crates/beast-interpreter" }
beast-ecs = { path = "crates/beast-ecs" }
beast-sim = { path = "crates/beast-sim" }
beast-serde = { path = "crates/beast-serde" }
beast-world = { path = "crates/beast-world" }
beast-climate = { path = "crates/beast-climate" }
beast-render = { path = "crates/beast-render" }
beast-chronicler = { path = "crates/beast-chronicler" }
beast-ui = { path = "crates/beast-ui" }

# Dev-only
proptest = "1.5"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
# S7.2 (#130) — atomic save-to-path uses a sibling temp file then rename;
# tempfile gives us a cross-platform NamedTempFile with persist(), and
# the test suites use it for tempdir() fixtures. Runtime dep on
# beast-serde, dev dep elsewhere.
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false

[profile.bench]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = true
