[package]
name = "beast-core"
description = "Foundations for Beast Evolution Game: deterministic fixed-point math, PRNG, entity/time primitives, and shared error type."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
doctest = true

[dependencies]
fixed = { workspace = true }
rand_core = { workspace = true }
rand_xoshiro = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
serde_json = "1"

[[bench]]
name = "core_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
float_arithmetic = "warn"
