[package]
name = "beast-ecs"
description = "ECS foundation for the Beast Evolution Game — wraps specs::World with a deterministic, L3-layer facade used by beast-sim and higher crates."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
doctest = true

[dependencies]
beast-core = { workspace = true }
specs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
# Note: `beast-channels`, `beast-primitives`, and `beast-genome` are added
# as dependencies by later S5 stories (5.4 needs the registries for
# `Resources`; 5.2 needs `beast-genome` + `beast-primitives` for the
# GenomeComponent / PhenotypeComponent newtypes) — they intentionally
# do not appear here to keep the S5.1 compile graph minimal.

[dev-dependencies]
proptest = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
float_arithmetic = "warn"
