[package]
name = "beast-render"
description = "SDL3-backed rendering layer for the Beast Evolution Game. Renders simulation snapshots; never feeds values back into sim state."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
doctest = true

[features]
# Default to the real SDL3 backend. CI / unit tests / determinism gates use
# `--no-default-features --features headless` so the workspace builds on
# machines that don't have SDL3 native libs handy.
default = ["sdl"]
# Pulls in the `sdl3` crate with build-from-source-static so we link a
# vendored, statically-built copy of SDL3 — no runtime DLL hunt, no system
# package required. Build prerequisite: a working C toolchain + cmake on
# PATH (MSVC on Windows, clang/gcc elsewhere).
sdl = ["dep:sdl3"]
# Compiles the public API without linking SDL3. The `Renderer` facade in
# this mode is a no-op stub used by tests and headless integration runs.
headless = []

[dependencies]
# Q3232 + BodySite + general L0 utilities are read all over the visual
# pipeline; the interpreter dep brings ResolvedPhenotype (the pipeline's
# input contract); the world dep brings BiomeTag + Archipelago for the
# world-map renderer (S9.3). All three are pure-Rust deps — no SDL coupling.
beast-core = { workspace = true }
beast-interpreter = { workspace = true }
beast-world = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dependencies.sdl3]
workspace = true
optional = true
features = ["build-from-source-static"]

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[example]]
# `required-features = ["sdl"]` makes cargo refuse to build this binary
# when the SDL backend isn't enabled, so the example doc comment's promise
# matches the actual cargo behavior.
name = "window"
required-features = ["sdl"]

[[example]]
name = "animation"
required-features = ["sdl"]

[[example]]
name = "world_map"
required-features = ["sdl"]

[[bench]]
# Pipeline + animation rig + animator-sample benchmarks. Run with
#   cargo bench -p beast-render --no-default-features --features headless
# so the SDL backend doesn't get pulled into the bench harness.
name = "pipeline_bench"
harness = false

[lints.rust]
# Forbid `unsafe { ... }` blocks unless they carry a `// SAFETY:` comment
# explaining the FFI invariant. We use `deny` rather than `forbid` so a
# specific call site can opt back in via `#[allow(unsafe_code)]` with a
# justification — that's still loud in code review.
unsafe_code = "deny"

[lints.clippy]
# Render code can use floats for camera/perspective math; the determinism
# contract only applies to sim state. We rely on rust-reviewer + INVARIANTS
# §1 to keep render-derived values from leaking back into sim.
