[package]
name = "beast-serde"
description = "Save/load, replay journaling, and deterministic serialization for the Beast Evolution Game."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
doctest = true

[dependencies]
beast-core = { workspace = true }
beast-channels = { workspace = true }
beast-primitives = { workspace = true }
beast-genome = { workspace = true }
beast-ecs = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Floats are forbidden on the sim path (INVARIANTS §1). The save layer
# is sim-adjacent and writes sim state verbatim; keeping the same
# escalation here prevents float values from sneaking in via custom
# serializers.
float_arithmetic = "deny"
