[package]
name = "beast-sim"
description = "Tick loop orchestration for the Beast Evolution Game — owns the EcsWorld + Resources and drives the 8-stage schedule every tick."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
doctest = true

[dependencies]
beast-core = { workspace = true }
beast-channels = { workspace = true }
beast-primitives = { workspace = true }
beast-genome = { workspace = true }
beast-interpreter = { workspace = true }
beast-ecs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Floats are forbidden on the sim path (INVARIANTS §1). `deny` makes
# this unambiguous regardless of how clippy is invoked; `warn` only
# escalates under `-D warnings`, which is invocation-dependent.
float_arithmetic = "deny"
