[package]
name = "beast-ui"
description = "Retained-mode widget framework for the Beast Evolution Game UI. Read-only against sim state per INVARIANTS §6."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
doctest = true

[features]
# Mirror beast-render's feature split so downstream crates can pick the same
# backend at workspace level. The `sdl` feature pulls in `beast-render` with
# its real SDL3 backend; `headless` keeps the public API but compiles without
# linking SDL3 — used by CI, tests, and integration runs on display-less
# machines. Default to `sdl` to match beast-render.
default = ["sdl"]
sdl = ["beast-render/sdl"]
headless = ["beast-render/headless"]

[dependencies]
# beast-core supplies WidgetId-friendly newtypes (we keep WidgetId here, but
# the workspace-shared error / fixed-point helpers are useful for future
# bindings). beast-render is depended on so the feature split flows through;
# no widget code in this story actually drives the renderer yet — that lands
# in S10.4 when screens embed renderer viewports.
beast-core = { workspace = true }
# `default-features = false` is load-bearing: beast-render's default
# feature is `sdl`, and cargo features are additive. Without this opt-out
# the `sdl` feature would stay on even when a downstream caller selects
# beast-ui's `headless` feature, dragging SDL3-from-source onto every
# build (including the Linux CI runner that has no X11 dev libs). The
# explicit feature pass-throughs below are now the only way to enable a
# backend.
#
# Using a direct `path = ...` instead of `workspace = true` because
# overriding `default-features = false` through workspace inheritance is
# unreliable in our cargo version: `cargo metadata` still reports
# `uses_default_features: true` and CI's resolver pulls beast-render's
# `sdl` feature in transitively. A direct path dep sidesteps the
# inheritance path entirely.
beast-render = { path = "../beast-render", default-features = false }
# S10.4: screen builders embed `&dyn ChroniclerQuery` so the bestiary
# screen can render label / observation summaries without bridging
# through a sim crate. Chronicler is L4 → ui (L5) is layer-safe.
beast-chronicler = { workspace = true }
serde = { workspace = true }

# S10.8 (#213) — the bestiary integration test wires the S10 stack
# end-to-end: spawn 50 creatures (beast-sim spawner), run 1000 ticks
# (beast-sim tick loop), feed primitive snapshots produced by the
# interpreter pipeline into the chronicler, and render the bestiary
# screen against the resulting `ChroniclerQuery`. The deps stay scoped
# to the test binary; runtime UI code does not pull on sim/interpreter.
[dev-dependencies]
beast-sim = { workspace = true }
beast-interpreter = { workspace = true }
beast-genome = { workspace = true }
beast-ecs = { workspace = true }
beast-channels = { workspace = true }
beast-primitives = { workspace = true }

[lints.rust]
# Forbid `unsafe`. The widget framework is pure data + dispatch; any unsafe
# block here would be a bug, not an FFI necessity.
unsafe_code = "forbid"
